app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: app-docker
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: app-docker
    app.kubernetes.io/name: app-docker
    app.kubernetes.io/part-of: app-docker
    app.openshift.io/runtime: java
  name: app-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-docker
  template:
    metadata:
      labels:
        app: app-docker
    spec:
      containers:
      - name: app-docker
        imagePullPolicy: Always
        image: docker.io/masp2r/argocd-poc:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
