app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-docker
  name: app-docker
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: app-docker
    weight: 100
